// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`manager/helmv3/extract extractPackageFile() parses simple Chart.yaml correctly 1`] = `
Object {
  "datasource": "helm",
  "deps": Array [
    Object {
      "currentValue": "0.9.0",
      "depName": "redis",
      "registryUrls": Array [
        "https://charts.helm.sh/stable",
      ],
    },
    Object {
      "currentValue": "0.8.1",
      "depName": "postgresql",
      "registryUrls": Array [
        "https://charts.helm.sh/stable",
      ],
    },
  ],
  "packageFileVersion": "0.1.0",
}
`;

exports[`manager/helmv3/extract extractPackageFile() resolves aliased registry urls 1`] = `
Object {
  "datasource": "helm",
  "deps": Array [
    Object {
      "currentValue": "0.9.0",
      "depName": "redis",
      "registryUrls": Array [
        "https://my-registry.gcr.io/",
      ],
    },
    Object {
      "currentValue": "1.0.0",
      "depName": "example",
      "registryUrls": Array [
        "https://registry.example.com/",
      ],
    },
  ],
  "packageFileVersion": "0.1.0",
}
`;

exports[`manager/helmv3/extract extractPackageFile() skips invalid registry urls 1`] = `
Object {
  "datasource": "helm",
  "deps": Array [
    Object {
      "currentValue": "0.9.0",
      "depName": "redis",
      "registryUrls": Array [
        "@placeholder",
      ],
      "skipReason": "placeholder-url",
    },
    Object {
      "currentValue": "0.8.1",
      "depName": "postgresql",
      "registryUrls": Array [
        "nope",
      ],
      "skipReason": "invalid-url",
    },
    Object {
      "currentValue": "0.8.1",
      "depName": "broken",
      "skipReason": "no-repository",
    },
  ],
  "packageFileVersion": "0.1.0",
}
`;

exports[`manager/helmv3/extract extractPackageFile() skips local dependencies 1`] = `
Object {
  "datasource": "helm",
  "deps": Array [
    Object {
      "currentValue": "0.9.0",
      "depName": "redis",
      "registryUrls": Array [
        "https://charts.helm.sh/stable",
      ],
    },
    Object {
      "currentValue": "0.8.1",
      "depName": "postgresql",
      "registryUrls": Array [
        "file:///some/local/path/",
      ],
      "skipReason": "local-dependency",
    },
  ],
  "packageFileVersion": "0.1.0",
}
`;
